src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction_terminator__terminator_userquit_before_terminator.snap
---
source: src/tui/snapshot_tests/interaction_terminator.rs
expression: terminal.backend()
---
" agent agent  ·  model default  ·  #42                                                                                  "
"Working on issue #42                                                                                                    "
"                                                                                                                        "
"No messages yet — type a prompt below to start.                                                                         "
"Try: "Summarize this issue and propose a step-by-step plan."                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"[Enter] Send  [Shift+Enter] Newline  [Ctrl+P] /pushup (off)  [Ctrl+L] Clear input  [Ctrl+Q] Quit  [Esc] Back            "
"╔════════════════════════════════════════════════════[ Terminated ]════════════════════════════════════════════════════╗"
"║                          Session terminated (user quit). Press any key to return to Issues.                          ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
